new armor piece

--- a/src/main/resources/assets/changed/lang/en_us.json
+++ b/src/main/resources/assets/changed/lang/en_us.json
@@ -53,6 +53,7 @@
   "subtitles.changed.blow1": "Player infected",
 
   "item.changed.benign_pants": "Latex Shorts",
+  "item.changed.black_top": "Black Top",
   "item.changed.blood_syringe": "Blood Syringe",
   "item.changed.dark_latex_crystal_fragment": "Dark Latex Crystal Shard",
   "item.changed.dark_latex_dragon_crystal_fragment": "Dark Latex Dragon Crystal Shard",
