--- a/src/main/resources/assets/changed/lang/en_us.json
+++ b/src/main/resources/assets/changed/lang/en_us.json
@@ -73,6 +73,7 @@
   "item.changed.latex_tipped_arrow": "Latex Tipped Arrow",
   "item.changed.orange": "Orange",
   "item.changed.pink_pants": "Pink Shorts",
+  "item.changed.pink_top": "Pink Top",
   "item.changed.syringe": "Syringe",
   "item.changed.white_latex_goo": "White Latex Goo",
   "item.changed.white_latex_bucket": "White Latex Bucket",
